# 2026

./: .gitattributes  .gitignore  AGENTS.md
Best_Research/#Done/Rust/#Defining/io/io_macros_project_semicolon_output_recursion_fixed/: Cargo.toml  Justfile  README.md  rustfmt.toml
Best_Research/#Done/Rust/Advanced Rust/CargoRustExample-CodeLLDB+MVC Setup/: Cargo.toml  README.md  build.rs  rustfmt.toml
Best_Research/#Done/Rust/Advanced Rust/CargoRustExample-CodeLLDB+MVC Setup/scripts/: bootstrap.py  render_flamegraph.py
Best_Research/#Done/Rust/Advanced Rust/WindowsGraphics/: Cargo.toml  UI_ARCHITECTURE.md  agents.md  rustfmt copy.toml
Best_Research/#Done/Rust/Advanced Rust/WindowsGraphics/assets/: example_cube.gltf
Best_Research/#Done/Rust/Advanced Rust/WindowsGraphics/src/: main.rs
Best_Research/#Done/WindowsGraphics/: Cargo.toml  agents.md  build.rs  rustfmt.toml
Best_Research/#Done/WindowsGraphics/crates/diagnostics/src/: lib.rs  performance_metrics.rs
Best_Research/#Done/WindowsGraphics/crates/graphics/: ARCHITECTURE.md  Cargo.toml
Best_Research/#Done/WindowsGraphics/crates/graphics/shaders/: metrics_overlay.hlsl  temporal_antialiasing.hlsl
Best_Research/#Done/WindowsGraphics/crates/graphics/src/: contract.rs  direct3d.rs  lib.rs  metrics_overlay.rs  settings.rs  temporal_antialiasing.rs  user_interface_renderer.rs
Best_Research/#Done/WindowsGraphics/crates/gui/: ARCHITECTURE.md  Cargo.toml
Best_Research/#Done/WindowsGraphics/crates/gui/src/: immediate_mode.rs  layout.rs  lib.rs  ui.rs
Best_Research/#Done/WindowsGraphics/crates/models/src/: gltf.rs
Best_Research/#Done/WindowsGraphics/crates/platform/: Cargo.toml
Best_Research/#Done/WindowsGraphics/crates/platform/src/: lib.rs  window.rs
Best_Research/#Done/WindowsGraphics/src/: cube.rs  gltf.rs  graphics.rs  main.rs  metrics_overlay.rs  performance_metrics.rs  temporal_antialiasing.rs  window.rs
Best_Research/#Done/WindowsGraphics/src/ui/: ARCHITECTURE.md  metrics.rs
Best_Research/AssemblySubroutines/CppExample/: CMakeLists.txt  README.md
Best_Research/AssemblySubroutines/CppExample/src/: main.cpp
Best_Research/Build Systems/: README.md
Best_Research/Build Systems/XmakeCmakeDependencyExample/cmake_math/: CMakeLists.txt
Best_Research/Build Systems/XmakeCmakeDependencyExample/cmake_math/include/: cmake_math.h
Best_Research/Build Systems/XmakeCmakeDependencyExample/cmake_math/src/: cmake_math.cpp
Best_Research/Build Systems/XmakeCmakeDependencyExample/vulkan_demo/: .clang-format  .clang-tidy  CMakeLists.txt
Best_Research/Build Systems/XmakeCmakeDependencyExample/vulkan_demo/include/vulkan_demo/: vulkan_demo.hpp
Best_Research/Build Systems/XmakeCmakeDependencyExample/vulkan_demo/src/: vulkan_context.cppm  vulkan_demo.cpp
Best_Research/Build Systems/~Bad/MesonCExample/: RUNME.md  meson.build
Best_Research/Build Systems/~Bad/MesonCExample/asm/x86_64_windows/: add.asm
Best_Research/Rust/hotgame-live-windows-v3/hotgame-live-windows/: Cargo.toml  README.md  dev.bat  dev.ps1  setup.bat
Best_Research/Rust/hotgame-live-windows-v3/hotgame-live-windows/scripts/: clean-hot.ps1  doctor.ps1  setup.ps1
Codex-Test/LearningCPP/CSharp/Header_Intefaces_NameSpaces/examples/header_first/: CMakeLists.txt
Codex-Test/LearningCPP/TestingPatterns/Header_Intefaces_NameSpaces/examples/source_divided/: CMakeLists.txt
Codex-Test/LearningCPP/TestingPatterns/ParameterObjectPattern/engine-config-example-source/: CMakeLists.txt  build.ps1
Codex-Test/LearningCPP/TestingPatterns/ParameterObjectPattern/engine-config-example-source/src/: asset_store.cpp  file_system.cpp  main.cpp  physics_engine.cpp
HackerRank/: HackerRank.sln
Rust/Professional_Engine/: Cargo.toml  EXECUTABLE_API.md  README.md
Rust/Professional_Engine/crates/engine-audio/: Cargo.toml
Rust/Professional_Engine/crates/engine-audio/src/: lib.rs  plugin.rs
Rust/Professional_Engine/crates/engine-core/src/: context.rs  error.rs  event.rs  lib.rs  plugin.rs
Rust/Professional_Engine/crates/engine-render/: Cargo.toml
Rust/Professional_Engine/crates/engine-render/src/: plugin.rs
Rust/Professional_Engine/crates/engine-runtime/: Cargo.toml
Rust/Professional_Engine/crates/engine-runtime/src/: config.rs  lib.rs  runtime.rs
Rust/Professional_Engine/crates/game-client/: Cargo.toml
Rust/Professional_Engine/crates/game-client/src/: app.rs  config.rs  lib.rs
Rust/Professional_Engine/crates/game-client/src/plugins/: gameplay.rs  mod.rs
Rust/Professional_Engine/crates/launcher/: Cargo.toml
Rust/Professional_Engine/crates/launcher/src/: cli.rs  main.rs
Rust/Professional_Engine/examples/executable-api-demo/: Cargo.toml  README.md
Rust/Professional_Engine/examples/executable-api-demo/callers/: call_from_powershell.ps1  call_from_python.py
Rust/Professional_Engine/examples/executable-api-demo/src/: cli.rs  error.rs  main.rs  output.rs
Rust/Professional_Engine/examples/executable-api-demo/src/commands/: benchmark.rs  headless_server.rs  mod.rs  run.rs  validate_assets.rs
Rust/Professional_Engine/examples/executable-api-demo/tests/: process_api.rs
Rust/Professional_Engine/scripts/: call-launcher.ps1
Rust/Transpiler/better testing/rustplus_transpiler(20)/rustplus_transpiler/: ARCHITECTURE.md  Cargo.toml  README.md  RUNME.md  TESTING.md
Rust/Transpiler/better testing/rustplus_transpiler(20)/rustplus_transpiler/src/: cargo_integration.rs  codegen.rs  config.rs  incremental.rs  lib.rs  program.rs  transpiler.rs
Rust/Transpiler/better testing/rustplus_transpiler(20)/rustplus_transpiler/tests/: guide_language_features.rs
Rust/rust_memory_constructors(1)/rust_memory_constructors/: Cargo.toml  README.md
Rust/rust_memory_constructors(1)/rust_memory_constructors/src/: lib.rs  main.rs  memory.rs
Rust/rust_memory_constructors(1)/rust_memory_constructors/tests/: article_constructors_tests.rs
claude/AssemblySubroutines/CExample/: CMakeLists.txt
claude/OwnBuildSystem_CCargo/ccargo_testproject/ccargo/: Cargo.toml  README.txt
claude/OwnBuildSystem_CCargo/ccargo_testproject/ccargo/src/: build.rs  main.rs  manifest.rs  util.rs
(+1407 files in other folders)
