[workspace]
members = [
    "crates/diagnostics",
    "crates/graphics",
    "crates/models",
    "crates/platform",
]
resolver = "2"

[package]
name = "dx11_demo"
version = "0.1.0"
edition = "2021"

[dependencies]
diagnostics = { path = "crates/diagnostics" }
graphics = { path = "crates/graphics" }
models = { path = "crates/models" }
platform = { path = "crates/platform" }

windows = "0.62"
