[package]
name = "assembly_subroutines"
version = "0.1.0"
edition = "2024"

[profile.release]
debug = true
strip = "none"

[build-dependencies]
cc = "1"

[dependencies]
dotenvy = "0.15"
tracing = "0.1"
tracing-flame = "0.2.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
criterion = "0.8.2"
