[package]
name = "rustplus"
version = "0.4.0"
edition = "2021"
license = "MIT"
description = "A modular Rust Plus (.rp) to Rust transpiler with feature-gated language extensions."

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
walkdir = "2.5"
