[package]
name = "io_macros_project"
version = "0.1.0"
edition = "2021"
description = "Beginner-friendly input/output macros for Rust console programs."
license = "MIT OR Apache-2.0"
default-run = "io_macros_project"

[lib]
path = "src/lib.rs"

[dependencies]
io_macros_project_macros = { path = "io_macros_project_macros" }

[[bin]]
name = "io_macros_project"
path = "src/main.rs"

[[bin]]
name = "perf_all"
path = "src/perf_all.rs"
